--- a/Aula_03/style.css
+++ b/Aula_03/style.css
@@ -22,8 +22,7 @@ input[type="number"] {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 
-3px;
+    border-radius: 3px;
 }
 
 button[type="submit"] {
